# aoc2016

./: LICENSE  README.md  aoc2016.cabal  thing  thing.hi  thing.hs
src/: Main.hs
src/Days/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Prelude.hs
