name:                aoc2016
version:             0.1.0.0
synopsis:            Advent of Code 2016 Solutions
description:         Please see README.md
homepage:            https://github.com/unknownloner/aoc2016#readme
license:             MIT
license-file:        LICENSE
author:              Galen Alderson
maintainer:          galen.alderson@gmail.com
copyright:           2016 Galen Alderson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2016
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Days.Prelude
                     , Days.Day1
                     , Days.Day2
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , trifecta
                     , parsers
                     , mtl
                     , containers
                     , array
                     , split
